[before production] just saving

--- a/csduck/templates/includes/header.html.jinja
+++ b/csduck/templates/includes/header.html.jinja
@@ -12,13 +12,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-underline mx-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Duckwaves</a>
+                    <a class="nav-link active" aria-current="page" href="#">Waves</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ducksplash</a>
+                    <a class="nav-link" href="#">Splashes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="#">Quacks</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"></a>
                 </li>
             </ul>
             {% if current_user.is_authenticated %}
