--- a/csduck/templates/index.html.jinja
+++ b/csduck/templates/index.html.jinja
@@ -3,7 +3,7 @@
 {"name": "Operating Systems", "url": url_for("os.index")},
 {"name": "Data Structures and Algorithms", "url": ""},
 {"name": "Language and Compilers", "url": ""},
-{"name": "Computer Networking", "url": ""},
+{"name": "Computer Networking", "url": url_for("cn.index")},
 {"name": "Fundamentals of Programming", "url": url_for("pg.index")}
 ]%}
 
@@ -12,18 +12,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta
-          http-equiv="X-UA-Compatible"
-          content="IE=edge">
-    <meta
-          name="viewport"
-          content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Open props -->
     <link rel="stylesheet" href="https://unpkg.com/open-props" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <style>
@@ -119,8 +115,7 @@
                             link-underline-opacity-0 
                             link-offset-3-hover
                             link-underline-opacity-100-hover 
-                            stretched-link"
-                           href="{{ duckwave.url }}">{{ duckwave.name }}</a>
+                            stretched-link" href="{{ duckwave.url }}">{{ duckwave.name }}</a>
                     </div>
                 </div>
                 {% endfor %}
@@ -141,12 +136,12 @@
     </div>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-            crossorigin="anonymous"></script>
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <!-- htmx -->
     <script src="https://unpkg.com/htmx.org@1.9.0"
-            integrity="sha384-aOxz9UdWG0yBiyrTwPeMibmaoq07/d3a96GCbb9x60f3mOt5zwkjdbcHFnKH8qls"
-            crossorigin="anonymous"></script>
+        integrity="sha384-aOxz9UdWG0yBiyrTwPeMibmaoq07/d3a96GCbb9x60f3mOt5zwkjdbcHFnKH8qls"
+        crossorigin="anonymous"></script>
     <!-- Alpine.js -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.12.0/dist/cdn.min.js"></script>
 
