--- a/csduck/rodi/templates/rodi/index.html.jinja
+++ b/csduck/rodi/templates/rodi/index.html.jinja
@@ -2,7 +2,7 @@
 
 
 <p>
-    기본기가 중요하다는 뻔한 말을 믿습니다.
+    저는 기본기가 중요하다는 뻔한 말을 믿습니다.
     <a href="{{ url_for('csduck.index') }}">CS 공부기록</a>
 </p>
 <p>
