--- a/csduck/pyduck/templates/pyduck/index.html.jinja
+++ b/csduck/pyduck/templates/pyduck/index.html.jinja
@@ -1,6 +1,7 @@
 {% extends "pyduck/base.html.jinja" %}
 
 {% block css %}
+{{ super() }}
 <style>
     .hero__title {
         background: var(--gradient-2);
