--- a/csduck/pyduck/templates/pyduck/data/sidebar.html.jinja
+++ b/csduck/pyduck/templates/pyduck/data/sidebar.html.jinja
@@ -2,13 +2,13 @@
 {
 "code": "all",
 "emoji": "💬",
-"name": "분류 전체",
+"name": "글들 다보기",
 "description": "모든 카테고리를 보실 수 있습니다 :)"
 },
 {
 "code": "help",
 "emoji": "🙏",
-"name": "묻고답하기",
+"name": "묻고 답하기",
 "description": "Python 관련 Q&A로 Pythonista 분들의 도움이 필요합니다!"
 },
 {
@@ -18,8 +18,8 @@
 "description": "개발자로서 혹은 그냥 사람으로 사는 이야기를 나누는 공간입니다."
 },
 {"code": "knowledge",
-"emoji": "📘",
-"name": "지식/삽질 공유",
+"emoji": "⛏️",
+"name": "삽질 나누기",
 "description": "파이썬 관련 지식 혹은 프로그래밍 관련 지식을 공유하는 공간입니다."
 }
 ]%}
