--- a/csduck/pyduck/templates/pyduck/data/sidebar.html.jinja
+++ b/csduck/pyduck/templates/pyduck/data/sidebar.html.jinja
@@ -32,3 +32,13 @@
 "description": "모든 카테고리를 보실 수 있습니다 :)"
 }
 ]%}
+
+
+{% set sidebar_sotsog = [
+{
+"code": "blog",
+"emoji": "🏔️",
+"name": "블로그",
+"description": "pythonista들의 블로그 내용을 전합니다. :)"
+}
+]%}
