--- a/csduck/pyduck/community/templates/community/index_help.html.jinja
+++ b/csduck/pyduck/community/templates/community/index_help.html.jinja
@@ -1,6 +1,5 @@
 {% extends "pyduck/base.html.jinja" %}
 
-
 {% block main %}
 {% set c = sidebar_community | selectattr("code", "eq", "help") | list | first %}
 <div class="container">
@@ -26,45 +25,8 @@
 </div>
 <div class="container">
     <div class="p-3 bg-body-tertiary rounded-2 mt-3">
-        {% for q in qp %}
-        <div class="row py-3 border-bottom">
-            <div class="col d-flex justify-content-between">
-                <div class="d-flex align-items-center">
-                    <div class="bg-body-secondary rounded-1 d-flex justify-content-center align-items-center"
-                         style="width: 48px; height: 48px;">
-                        <span class="fs-5">{{ c.emoji }}</span>
-                    </div>
-                    <div class="ps-1 ps-lg-3">
-                        <div class="fw-bold fs-5">
-                            <a class="link link-body-emphasis"
-                               href="{{ url_for('pyduck.community.question', question_id=q.id) }}">
-                                {{ q.title }}
-                            </a>
-                        </div>
-                        <div>
-                            <small>
-                                {{ q.user.nickname }}님이
-                                <pd-relative-time datetime="{{ q.created_at }}"></pd-relative-time>
-                                {{ c.name }} 관련 작성
-                            </small>
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex align-items-center gap-2">
-                    <div class="pe-3">
-                        <img src="{{ q.user.avatar.url }}" width="30px" height="30px" class="rounded-circle">
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <i class="bi bi-arrow-up"></i>
-                        <span class="ps-1 pe-2">{{ q.vote_count }}</span>
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <i class="bi bi-chat"></i>
-                        <span class="ps-1 pe-2">{{ q.comment_count }}</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% for question in qp %}
+        {% include "community/question/question_list_item.html.jinja" %}
         <!-- [start] infinite scroll -->
         {% if loop.last and qp.has_next %}
         <div
