--- a/csduck/pyduck/community/templates/community/question/question.html.jinja
+++ b/csduck/pyduck/community/templates/community/question/question.html.jinja
@@ -9,7 +9,7 @@
 {% block main %}
 {% set c = sidebar_community|selectattr("code", "eq", "help")|list|first %}
 {% set voted = q.votes|selectattr("user_id", "eq", current_user.id)|list|length %}
-<div class="container pt-5 px-5">
+<div class="container pt-5 px-2 px-lg-5">
     <div class="row">
         <div class="col">
             <div>
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="row mt-3">
-        <div class="col-8">
+        <div class="col-12 col-lg-8">
             <div class="p-3 border rounded-2">
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
@@ -85,7 +85,7 @@
         </div>
     </div>
 </div>
-<div class="container px-5 pt-2 answers">
+<div class="container px-2 px-lg-5 pt-2 answers">
     {% for answer in ap %}
     {{ render_answer(answer) }}
     <!-- [start] infinite scroll trigger -->
@@ -99,9 +99,9 @@
     <!-- infinite scroll trigger [end] -->
     {% endfor %}
 </div>
-<div class="container px-5 pb-5">
+<div class="container px-2 px-lg-5 pb-5">
     <div class="row">
-        <div class="col-8 pt-3">
+        <div class="col-12 col-lg-8 pt-3">
             <div x-data="{
                     editmode: false
                 }"
