--- a/csduck/pyduck/templates/pyduck/base.html.jinja
+++ b/csduck/pyduck/templates/pyduck/base.html.jinja
@@ -1,6 +1,4 @@
-{% from "pyduck/data/sidebar.html.jinja" import sidebar_community %}
-{% from "pyduck/data/sidebar.html.jinja" import sidebar_learning %}
-{% from "pyduck/data/sidebar.html.jinja" import sidebar_sotsog %}
+{% from "pyduck/data/sidebar.html.jinja" import sidebar_community, sidebar_learning, sidebar_sotsog %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -57,12 +55,13 @@
         /* ckeditor 5 cutomization */
         .ck.ck-content:not(.ck-comment__input *) {
             height: 300px;
+            width: 100%;
             overflow-y: auto;
         }
 
         .answer .ck.ck-content:not(.ck-comment__input *) {
             height: 150px;
-            overflow-y: auto;
+            width: 100%;
         }
     </style>
 
@@ -100,130 +99,12 @@
 </head>
 
 <body>
-    <header class="px-3 py-2 bg-body-tertiary">
-        <div class="container-fluid">
-            <div class="d-flex flex-wrap align-items-center justify-content-between">
-                <div class="fs-4 fw-bold">
-                    <a href="/"
-                       class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
-                        <span class="logo-color"><i class="bi bi-tropical-storm"></i>pyduck</span>
-                    </a>
-                </div>
-                <div>
-                    {% if current_user.is_authenticated %}
-                    <div class="btn-group">
-                        <button class="btn btn-outline-secondary border-0 rounded-circle dropdown-toggle no-caret p-2"
-                                type="button"
-                                data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false"
-                                data-bs-offset="0,5">
-                            <img class="rounded-circle" src="{{ current_user.avatar.url }}"
-                                 width="32" height="32">
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-start dropdown-menu-lg-end pt-0"
-                            style="width:var(--size-fluid-9)">
-                            <li class="bg-success-subtle rounded-2 py-3 px-2 border-bottom">
-                                <div class="d-flex align-items-center">
-                                    <div>
-                                        <img class="rounded-circle"
-                                             src="{{ current_user.avatar.url }}" width="50"
-                                             height="50">
-                                    </div>
-                                    <div class="ps-3">
-                                        <div class="fw-bold">{{current_user.nickname}} </div>
-                                        <div><small>{{ current_user.username }}</small></div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <hr class="dropdown-divider mt-0">
-                            </li>
-                            <li>
-                                <a class="dropdown-item d-flex align-items-center"
-                                   href="{{ url_for('pyduck.auth.sign_out') }}">
-                                    <div class="ps-3 fs-4 fw-bold">
-                                        <i class="bi bi-box-arrow-right"></i>
-                                    </div>
-                                    <div class="ps-4">
-                                        <span>로그아웃</span>
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    {% else %}
-                    <button class="btn btn-outline-secondary rounded-0" data-bs-toggle="modal"
-                            data-bs-target="#modal" x-data @click="$dispatch('modalsignup')">회원가입</button>
-                    <button class="btn btn-outline-dark rounded-0 btn__signin" data-bs-toggle="modal"
-                            data-bs-target="#modal"
-                            x-data @click="$dispatch('modalsignin')">로그인</button>
-                    {% endif %}
-                </div>
-            </div>
-    </header>
+    {% include "pyduck/header/header.html.jinja" %}
     <div class="content container-fluid px-0">
         <div class="d-flex align-items-stretch h-100">
             <!-- [START] sidbar -->
-            <div class="bg-body-tertiary" style="min-width:280px;">
-                <div class="pt-5">
-                    <button class="btn btn-outline-primary border-0 w-100 rounded-0" type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                        <div class="fw-bold fs-5">커뮤니티</div>
-                    </button>
-                    <div class="collapse show pt-1" id="collapseExample">
-                        <ul class="nav flex-column nav-pills nav-fill">
-                            {% for item in sidebar_community %}
-                            <li class="nav-item text-start">
-                                <a class="nav-link link-body-emphasis d-flex" aria-current="page"
-                                   href="{{ url_for('pyduck.community.index', category=item.code) }}">
-                                    <div class="ms-3" style="width: 30px;">{{ item.emoji }}</div>
-                                    <div class="ps-3">{{ item.name }}</div>
-                                </a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-                <div class="pt-5">
-                    <button class="btn btn-outline-info border-0 w-100 rounded-0" type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#learning" aria-expanded="false" aria-controls="collapseExample">
-                        <div class="fw-bold fs-5">같이 배우기</div>
-                    </button>
-                    <div class="collapse show pt-1" id="learning">
-                        <ul class="nav flex-column nav-pills nav-fill">
-                            {% for item in sidebar_learning %}
-                            <li class="nav-item nav-item__learning text-start">
-                                <a class="nav-link link-body-emphasis d-flex" aria-current="page"
-                                   href="{{ url_for('pyduck.community.index', category=item.code) }}">
-                                    <div class="ms-3" style="width: 30px;">{{ item.emoji }}</div>
-                                    <div class="ps-3">{{ item.name }}</div>
-                                </a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-                <div class="pt-5">
-                    <button class="btn btn-outline-success border-0 w-100 rounded-0" type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#sotsog" aria-expanded="false" aria-controls="collapseExample">
-                        <div class="fw-bold fs-5">거인의 어깨너머</div>
-                    </button>
-                    <div class="collapse show pt-1" id="sotsog">
-                        <ul class="nav flex-column nav-pills nav-fill">
-                            {% for item in sidebar_sotsog %}
-                            <li class="nav-item nav-item__sotsog text-start">
-                                <a class="nav-link link-body-emphasis d-flex" aria-current="page"
-                                   href="{{ url_for('pyduck.community.index', category=item.code) }}">
-                                    <div class="ms-3" style="width: 30px;">{{ item.emoji }}</div>
-                                    <div class="ps-3">{{ item.name }}</div>
-                                </a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
+            <div class="bg-body-tertiary d-none d-lg-block" style="min-width:280px;">
+                {% include "pyduck/sidebar/sidebar.html.jinja" %}
             </div>
             <!-- sidebar [END] -->
             <div class="flex-grow-1">
@@ -232,22 +113,7 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <footer class="container-fluid bg-body-tertiary pt-3">
-            <div class="d-flex justify-content-between align-items-center py-3 border-top">
-                <div>
-                    &copy; 2023- pyduck. All rights reserved.
-                </div>
-                <div>
-                    <a class="btn btn-outline-secondary border-0 px-2 py-1"
-                       href="https://github.com/kssflow/csduck"
-                       target="_blank">
-                        <span class="fs-4"><i class="bi bi-github"></i></span>
-                    </a>
-                </div>
-            </div>
-        </footer>
-    </div>
+    {% include "pyduck/footer/footer.html.jinja" %}
     <!-- [START] modal -->
     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog"
