--- a/csduck/pyduck/community/templates/community/question/render_question_list_item.html.jinja
+++ b/csduck/pyduck/community/templates/community/question/render_question_list_item.html.jinja
@@ -18,6 +18,9 @@
                     <small> {{ question.user.nickname }}님이
                         <pd-relative-time datetime="{{ question.created_at }}"></pd-relative-time> {{ c.name }} 관련 작성
                     </small>
+                    <small class="{{ 'text-success' if question.answered }}">
+                        · {{ '해결됨' if question.answered else '미해결' }}
+                    </small>
                 </div>
             </div>
         </div>
