--- a/csduck/pyduck/community/templates/community/question/render_reaction.html.jinja
+++ b/csduck/pyduck/community/templates/community/question/render_reaction.html.jinja
@@ -51,7 +51,7 @@
         <input type="hidden" name="action" x-model="action">
         <div class="dropup">
             <button type="button"
-                    class="btn btn-outline-secondary dropdown-toggle rounded-pill"
+                    class="btn btn-sm btn-outline-secondary dropdown-toggle rounded-pill"
                     data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="0,5">
                 <i class="bi bi-emoji-smile"></i>
             </button>
@@ -61,7 +61,7 @@
                     {% set r = question.reactions|selectattr("code", "eq", rm.code)|list %}
                     {% set reacted = r|selectattr('user_id', 'eq', current_user.id)|list %}
                     <button
-                            class="btn btn-outline-secondary border-0 rounded-1 m-1 {{ 'active' if reacted }}"
+                            class="btn btn-sm btn-outline-secondary border-0 rounded-1 m-1 {{ 'active' if reacted }}"
                             @click="action='{{ ('unreact ' if reacted else 'react ') + rm.code }}'">
                         <div>{{ rm.emoji }}</div>
                     </button>
@@ -80,7 +80,7 @@
         {% set reacted = r|selectattr('user_id', 'eq', current_user.id)|list %}
         {% if r %}
         <button
-                class="btn btn-outline-secondary rounded-pill {{ 'active' if reacted }}"
+                class="btn btn-sm btn-outline-secondary rounded-pill {{ 'active' if reacted }}"
                 @click="action='{{ ('unreact ' if reacted else 'react ') + rm.code }}'">
             <span>{{ rm.emoji }}</span>
             <span>{{ r|length }}</span>
